@@ -5,6 +5,13 @@
     * Add tests for Net::SSLeay.
   [Document Improvement]
     * Improve docs for Net::SSLeay.
+  
+  [Bug Fix]
+    * Fix a bug of reference counting of Net::SSLeay#set_SSL_CTX method.
+  
+  [Incompatible Changes]
+    * Net::SSLeay#set_SSL_CTX throws an exception if the argument is undef.
+    * The return type of Net::SSLeay#set_SSL_CTX method becomes void.
 
 0.031 2024-12-19
   [New Features]
